objects/Part_Activation_Configuration__c.object
<CustomObject>
    <description>This custom object holds one of the record from custom setting for which Batch Job is running.</description>
    <fields>
        <fullName>Cascade_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the checkbox is set to True, the batch will be performed in a chain.</description>
        <inlineHelpText>Set to true if you do NOT want to break the chain of Batch execution</inlineHelpText>
        <label>Cascade Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conditional_Query__c</fullName>
        <description>This field holds the Query extension string that is appended to the Query in the Batch class. This is initialized from Custom Setting.</description>
        <inlineHelpText>This field holds the Query extension string that is appended to the Query in the Batch class.</inlineHelpText>
        <label>Conditional Query</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cron_Statement__c</fullName>
        <description>This field holds the CRON Statement. This value is used to schedule the next run of the batch class. Value is updated via Trigger.</description>
        <inlineHelpText>This field holds the CRON Statement.</inlineHelpText>
        <label>Cron Statement</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Object_Number__c</fullName>
        <description>This field holds the index number of Object for which the batch is executing.</description>
        <inlineHelpText>This field holds the index number of Object for which the batch is executing.</inlineHelpText>
        <label>Current Object Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Execute_Trigger_Upon_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is used to check if you want to execute the trigger on this object upon edit.</description>
        <inlineHelpText>Check this checkbox if you want to execute the trigger and start the process upon edit.</inlineHelpText>
        <label>Execute Trigger Upon Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Number_of_Objects__c</fullName>
        <description>This number is the maximum number of Objects on which batch will execute.</description>
        <inlineHelpText>Put a number equal to last index number in the Custom setting OR the number up to which you want to execute the batch class.</inlineHelpText>
        <label>Max Number of Objects</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Schedule_Run_Date__c</fullName>
        <description>The date on which the next schedule is scheduled.</description>
        <inlineHelpText>The date on which the next schedule is scheduled.</inlineHelpText>
        <label>Next Schedule Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <description>This is the API name of the Object on which currently the batch is executing.</description>
        <inlineHelpText>This is the API name of the Object on which currently the batch is executing.</inlineHelpText>
        <label>Object API Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Field_API_Name__c</fullName>
        <description>This is the API name of the Object&apos;s field on which currently the batch is executing.</description>
        <inlineHelpText>This is the API name of the Object&apos;s field on which currently the batch is executing.</inlineHelpText>
        <label>Object Field API Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Deactivation_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A flag to schedule the Parts Deactivation Batch.</description>
        <inlineHelpText>A flag to schedule the Parts Deactivation Batch.</inlineHelpText>
        <label>Schedule Deactivation Batch</label>
        <type>Checkbox</type>
    </fields>
    <label>Part Activation Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Part Activation Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Part Activation Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>